--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reach/auto-id": "^0.17.0",
     "@tailwindcss/forms": "^0.5.3",
     "classnames": "^2.3.2",
+    "clipboard-polyfill": "2.8.5",
     "isomorphic-unfetch": "^3.1.0",
     "next": "13.0.1",
     "nprogress": "^0.2.0",
